data/derived/sp14/progs/unify/prog1692.ml.out
Characters 24-27:
  "[" (fun x acc -> x ^ "; " ^ acc) 
  ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
